; ModuleID = '/home/carl/AnghaBench/git/extr_wt-status.c_wt_status_collect_free_buffers.c'
source_filename = "/home/carl/AnghaBench/git/extr_wt-status.c_wt_status_collect_free_buffers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wt_status = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wt_status_collect_free_buffers(%struct.wt_status* %0) #0 {
  %2 = alloca %struct.wt_status*, align 8
  store %struct.wt_status* %0, %struct.wt_status** %2, align 8
  %3 = load %struct.wt_status*, %struct.wt_status** %2, align 8
  %4 = getelementptr inbounds %struct.wt_status, %struct.wt_status* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 2
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @free(i32 %6)
  %8 = load %struct.wt_status*, %struct.wt_status** %2, align 8
  %9 = getelementptr inbounds %struct.wt_status, %struct.wt_status* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @free(i32 %11)
  %13 = load %struct.wt_status*, %struct.wt_status** %2, align 8
  %14 = getelementptr inbounds %struct.wt_status, %struct.wt_status* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @free(i32 %16)
  ret void
}

declare dso_local i32 @free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
